Working on instance bootstrapping.